docs: simplifica o README (enxuto, profissional, reflete o as-built)
Reduz de 304 para 77 linhas e corrige conteudo defasado: busca KD-tree exata (E=0), GraalVM Native + PGO, hot-path em Rust, 1 CPU / 350 MB.